--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,7 @@
 # "foreign" means not GNU, and is common for avoiding boring messages about files organized differently from what gnu expects
 
+ACLOCAL_AMFLAGS = -I m4
+
 SUBDIRS = src
 
 EXTRA_DIST = README LICENSE
