Using help2man to generate man page

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,5 +4,15 @@ ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS = src
 
-EXTRA_DIST = README LICENSE
+man_MANS = genwrapper.1 
+EXTRA_DIST = $(man_MANS) README LICENSE
+MAINTAINERCLEANFILES = $(man_MANS)
 
+# The man pages depend on the --help strings and the version number.
+common_mandeps = $(top_srcdir)/configure.ac
+
+# Depend on the source, not the binary; we don't need to regenerate the
+# binary when any source file changes, only the main one.
+# Use -o so that the `missing' program can infer the output file.
+genwrapper.1: $(top_srcdir)/src/genwrapper.cpp 
+	$(HELP2MAN) --name="OpenSceneGraph Introspection Wrapper Generator" --no-info $(top_builddir)/src/genwrapper -o $@
