--- a/configure.ac
+++ b/configure.ac
@@ -95,5 +95,16 @@ AC_SUBST([OSGINTROSPECTION_LIB])
 #AC_CHECK_FRAMEWORK(osg, [#include <osg/Version>])
 #AC_CHECK_FRAMEWORK(OpenThreads, [#include <OpenThreads/Version>])
 
+# GNU help2man creates man pages from --help output; in many cases, this
+# is sufficient, and obviates the need to maintain man pages separately.
+# However, this means invoking executables, which we generally cannot do
+# when cross-compiling, so we test to avoid that (the variable
+# "cross_compiling" is set by AC_PROG_CC).
+if test $cross_compiling = no; then
+    AM_MISSING_PROG(HELP2MAN, help2man)
+else
+    HELP2MAN=:
+fi
+
 #AC_OUTPUT(Makefile src/Makefile)
 AC_OUTPUT
