--- a/src/genwrapper/Makefile.am
+++ b/src/genwrapper/Makefile.am
@@ -1,12 +1,34 @@
-#AUTOMAKE_OPTIONS = foreign
-#ACLOCAL_AMFLAGS = -I ../../m4
+AM_CXXFLAGS = -I$(top_srcdir)/include
+LDADD = $(top_builddir)/src/libosgintrospection-@OSGINTROSPECTION_API_VERSION@.la
 
 # this lists the binaries to produce, the (non-PHONY, binary) targets in
 # the previous manual Makefile
 bin_PROGRAMS = genwrapper
-genwrapper_SOURCES = main.cpp Configuration.cpp FileSystemUtils.cpp NodeMap.cpp Notify.cpp PathNameUtils.cpp RegistryBuilder.cpp TypeDesc.cpp TypeNameUtils.cpp TypeRegistry.cpp WrapperGenerator.cpp Configuration.h FileSystemUtils.h NodeMap.h Notify.h PathNameUtils.h RegistryBuilder.h TypeDesc.h TypeNameUtils.h TypeRegistry.h WrapperGenerator.h XML_node.h XML_parser.h
 
-
+genwrapper_SOURCES = \
+    Configuration.cpp \
+    Configuration.h \
+    FileSystemUtils.cpp \
+    FileSystemUtils.h \
+    NodeMap.cpp \
+    NodeMap.h \
+    Notify.cpp \
+    Notify.h \
+    PathNameUtils.cpp \
+    PathNameUtils.h \
+    RegistryBuilder.cpp \
+    RegistryBuilder.h \
+    TypeDesc.cpp \
+    TypeDesc.h \
+    TypeNameUtils.cpp \
+    TypeNameUtils.h \
+    TypeRegistry.cpp \
+    TypeRegistry.h \
+    WrapperGenerator.cpp \
+    WrapperGenerator.h \
+    XML_node.h \
+    main.cpp \
+    XML_parser.h
 
 genwrapper_CPPFLAGS = $(XML_CFLAGS) $(BOOST_CPPFLAGS)
 genwrapper_LDFLAGS = $(XML_LIBS) $(BOOST_LDFLAGS) $(BOOST_REGEX_LIB)
