--- a/src/cppintrospection/Makefile.am
+++ b/src/cppintrospection/Makefile.am
@@ -1,6 +1,6 @@
 #AM_CPPFLAGS = -I$(top_srcdir)/include
-AM_CXXFLAGS = -I$(top_srcdir)/include $(OPENTHREADS_CFLAGS)
-AM_LIBS = $(OPENTHREADS_LIBS)
+AM_CXXFLAGS = -I$(top_srcdir)/include $(OPENTHREADS_CFLAGS) $(OSG_CFLAGS)
+AM_LIBS = $(OPENTHREADS_LIBS) $(OSG_LIBS)
 
 # use lib_LTLIBRARIES to build a shared lib:
 lib_LTLIBRARIES = libcppintrospection-@CPPINTROSPECTION_API_VERSION@.la
