fix typo in genwrapper.conf breaking the plane reflector

--- a/src/genwrapper/genwrapper.conf
+++ b/src/genwrapper/genwrapper.conf
@@ -73,7 +73,7 @@ end
 # add ReaderWriter and Comparator objects to Vec*, Quat and Plane classes
 
 configure reflector /osg::(Plane|Quat|(Vec(2|3|4)(f|d|b|ub)))/
-	readerwriter "cppntrospection::StdReaderWriter<reflected_type>"
+	readerwriter "cppintrospection::StdReaderWriter<reflected_type>"
 	comparator "cppintrospection::PartialOrderComparator<reflected_type>"
 end
 
