port over most changes from the 2.8 branch genwrappers.conf

--- a/src/genwrapper/genwrapper.conf
+++ b/src/genwrapper/genwrapper.conf
@@ -31,11 +31,17 @@ configure library "osgText"
 	dependency unix "-losgDB"
 end
 
+configure library "osgVolume"
+	dependency unix "-losgUtil -losgDB -losgGA"
+end
+
 configure library "osgViewer"
 	dependency unix "-losgUtil -losgDB -losgGA -losgText"
 end
 
 #############################################################################
+
+ignore file "osgDB/fstream"
 
 ignore file "osgUtil/OperationArrayFunctor"
 
@@ -49,6 +55,29 @@ suppress reflector "osgUtil::MultiplyRangeFunctor"
 suppress reflector "CPluginFunction"
 suppress reflector "PluginFunctionProxy"
 
+suppress reflector "osgWidget::UIObjectParent"
+
+
+#############################################################################
+
+suppress reflector "osgShadow::ProjectionShadowMap"
+
+suppress reflector "osgShadow::DebugShadowMap::ViewData"
+suppress reflector "osgShadow::DebugShadowMap::ViewData::PolytopeGeometry"
+suppress reflector "osgShadow::ViewDependentShadowTechnique::ViewData"
+
+suppress reflector "osgShadow::MinimalDrawBoundsShadowMap::META_ViewDependentShadowTechniqueData"
+suppress reflector "osgShadow::DebugShadowMap::META_ViewDependentShadowTechniqueData"
+suppress reflector "osgShadow::MinimalCullBoundsShadowMap::META_ViewDependentShadowTechniqueData"
+suppress reflector "osgShadow::MinimalShadowMap::META_ViewDependentShadowTechniqueData"
+suppress reflector "osgShadow::ProjectionShadowMap::META_ViewDependentShadowTechniqueData"
+suppress reflector "osgShadow::StandardShadowMap::META_ViewDependentShadowTechniqueData"
+suppress reflector "osgShadow::ViewDependentShadowTechnique::META_ViewDependentShadowTechniqueData"
+
+
+suppress reflector "osgShadow::ViewDependentShadowTechnique::getViewDependentData"
+suppress reflector "osgShadow::ViewDependentShadowTechnique::setViewDependentData"
+
 #############################################################################
 
 configure file /osg\/GraphicsContext/
@@ -58,6 +87,16 @@ end
 
 configure file /osgViewer\/ViewerBase/
 	emit before "#include <osgViewer/View>
+	"
+end
+
+configure file /osg\/BoundingBox/
+	emit before "#include <osg/BoundingSphere>
+	"
+end
+
+configure file /osg\/BoundingSphere/
+	emit before "#include <osg/BoundingBox>
 	"
 end
 
@@ -193,11 +232,12 @@ end
 
 #############################################################################
 
-# Doxygen fails to detect that /osg::Texture(1D|2D|3D|Rectangle)/ and
-# osgText::Font::GlyphTexture are not-abstract class, so we need
-# to specify that manually
+# Doxygen fails to detect that
+# /osg::Texture(1D|2D|2DMultisample|3D|Rectangle)/ and
+# osgText::Font::GlyphTexture are not-abstract class, so we need to
+# specify that manually
 
-configure reflector /osg::Texture(1D|2D|3D|Rectangle)/
+configure reflector /osg::Texture(1D|2D|2DMultisample|3D|Rectangle)/
     object-type
 end
 
@@ -252,6 +292,12 @@ end
 configure reflector "osg::GraphicsContext"
 	abstract-object-type
 end
+
+#############################################################################
+
+# Suppress scoped lock template
+
+suppress reflector "OpenThreads::ScopedLock< OpenThreads::Mutex >"
 
 #############################################################################
 
@@ -448,6 +494,60 @@ end
 
 configure reflector "osgManipulator::MotionCommand"
 	configure method /.*_SelectionList_.*/
+		replace with ""
+	end
+end
+
+#############################################################################
+
+# Fix bounding box/sphere - member templates aren't supported
+configure reflector "osg::BoundingBoxImpl< osg::Vec3d >"
+	configure method /.*_BoundingBoxImpl.*_VT_.*/
+		replace with ""
+	end
+	
+	configure method /.*_BoundingSphereImpl.*_VT_.*/
+		replace with ""
+	end
+end
+
+configure reflector "osg::BoundingBoxImpl< osg::Vec3f >"
+	configure method /.*_BoundingBoxImpl.*_VT_.*/
+		replace with ""
+	end
+	
+	configure method /.*_BoundingSphereImpl.*_VT_.*/
+		replace with ""
+	end
+end
+
+configure reflector "osg::BoundingSphereImpl< osg::Vec3d >"
+	configure method /.*_BoundingBoxImpl.*_VT_.*/
+		replace with ""
+	end
+	
+	configure method /.*_BoundingSphereImpl.*_VT_.*/
+		replace with ""
+	end
+end
+
+configure reflector "osg::BoundingSphereImpl< osg::Vec3f >"
+	configure method /.*_BoundingBoxImpl.*_VT_.*/
+		replace with ""
+	end
+	
+	configure method /.*_BoundingSphereImpl.*_VT_.*/
+		replace with ""
+	end
+end
+
+#############################################################################
+
+# Fix osgShadow wrapper crashing on load
+# Might not be needed when BoundingSphere/Box is fixed.
+
+configure reflector "osgShadow::ConvexPolyhedron"
+	configure method /.*_computeBoundingBox_.*/
 		replace with ""
 	end
 end
