more genwrapper.conf improvements

--- a/src/genwrapper/genwrapper.conf
+++ b/src/genwrapper/genwrapper.conf
@@ -41,6 +41,12 @@ end
 
 #############################################################################
 
+ignore file "osg/buffered_value"
+ignore file "osg/CameraNode"
+ignore file "osg/GL"
+ignore file "osg/Math"
+ignore file "osg/fast_back_stack"
+
 ignore file "osgDB/fstream"
 
 ignore file "osgUtil/OperationArrayFunctor"
@@ -334,6 +340,10 @@ suppress reflector "osg::ref_ptr< const osgFX::Effect >"
 
 # Doxygen incorrectly parses function typedefs as methods
 
+suppress reflector "osg::GL2Extensions"
+suppress reflector "osg::FBOExtensions"
+suppress reflector "osgSim::ShapeAttribute"
+
 configure reflector "osg::BufferObject::Extensions"
 	configure method "__typedef__void__APIENTRY_P1"
 		replace with ""
@@ -380,6 +390,33 @@ configure reflector "osg::BlendFunc::Extensions"
 end
 
 configure reflector "osg::FragmentProgram::Extensions"
+	configure method "__typedef__void__APIENTRY_P1"
+		replace with ""
+	end
+	configure method "__typedef__GLboolean__APIENTRY_P1"
+		replace with ""
+	end
+end
+
+configure reflector "osg::VertexProgram::Extensions"
+	configure method "__typedef__void__APIENTRY_P1"
+		replace with ""
+	end
+	configure method "__typedef__GLboolean__APIENTRY_P1"
+		replace with ""
+	end
+end
+
+configure reflector "osg::StencilTwoSided::Extensions"
+	configure method "__typedef__void__APIENTRY_P1"
+		replace with ""
+	end
+	configure method "__typedef__GLboolean__APIENTRY_P1"
+		replace with ""
+	end
+end
+
+configure reflector "osg::Texture3D::Extensions"
 	configure method "__typedef__void__APIENTRY_P1"
 		replace with ""
 	end
@@ -437,6 +474,19 @@ configure reflector "osg::State"
 	configure method "__typedef__void__APIENTRY_P1"
 		replace with ""
 	end
+end
+
+
+configure reflector "osgWidget::Window::Getter"
+    replace with ""
+end
+
+configure reflector "osgWidget::MouseHandler::MouseAction"
+    replace with ""
+end
+
+configure reflector "osgWidget::MouseHandler::MouseEvent"
+    replace with ""
 end
 
 #############################################################################
