Doxygen needs to expand META_NodeVisitor as defined

--- a/src/wrappers/Doxyfile.in
+++ b/src/wrappers/Doxyfile.in
@@ -192,7 +192,8 @@ EXPAND_AS_DEFINED      = META_Object \
                          META_Node \
                          META_Shape \
                          META_Technique \
-                         META_Effect
+                         META_Effect \
+                         META_NodeVisitor
 PREDEFINED             = 
 SKIP_FUNCTION_MACROS   = YES
 #---------------------------------------------------------------------------
