add a forward declaration header for variant_cast

--- a/src/cppintrospection/CMakeLists.txt
+++ b/src/cppintrospection/CMakeLists.txt
@@ -40,7 +40,8 @@ set(HEADERS
 	../../include/cppintrospection/Value
 	../../include/cppintrospection/Version
 	../../include/cppintrospection/type_traits
-	../../include/cppintrospection/variant_cast)
+	../../include/cppintrospection/variant_cast
+	../../include/cppintrospection/variant_cast_fwd)
 
 add_definitions(-DCPPINTROSPECTION_LIBRARY)
 include_directories(../../include ${OPENSCENEGRAPH_INCLUDE_DIRS})
