suppress troublesome osgAnimation wrappers

--- a/src/genwrapper/genwrapper.conf
+++ b/src/genwrapper/genwrapper.conf
@@ -485,6 +485,28 @@ end
 
 #############################################################################
 
+# avoid functions using raw template parameters in signature
+
+#configure reflector /osgAnimation::TemplateChannel.*/
+#	configure method /.*_SamplerType.*/
+#		replace with ""
+#	end
+#	configure property /.*_SamplerType.*/
+#		replace with ""
+#	end
+#end
+#suppress reflector /osgAnimation::TemplateChannel.*/
+suppress reflector /osgAnimation::Template.*/
+
+
+# inheriting from a template
+suppress reflector "osgAnimation::UpdateMatrixTransform"
+suppress reflector "osgAnimation::UpdateMorph"
+suppress reflector "osgAnimation::UpdateMaterial"
+suppress reflector "osgAnimation::StackedTransform"
+
+#############################################################################
+
 # avoid functions that use protected types, since those are not handled
 # currently
 
