ignore two fluid files because their XML won't parse
The degree symbol is to blame.

--- a/src/genwrapper/genwrapper.conf
+++ b/src/genwrapper/genwrapper.conf
@@ -49,6 +49,10 @@ ignore file "osgViewer/api/X11/GraphicsWindowX11"
 ignore file "osgViewer/api/Win32/GraphicsWindowWin32"
 ignore file "osgViewer/api/Cocoa/GraphicsWindowCocoa"
 
+# these two won't parse because of the "degrees" symbol in XML
+ignore file "osgParticle/FluidFrictionOperator"
+ignore file "osgParticle/FluidProgram"
+
 suppress reflector "osgUtil::AddRangeFunctor"
 suppress reflector "osgUtil::MultiplyRangeFunctor"
 
