suppress method dealing with protected types

--- a/src/genwrapper/genwrapper.conf
+++ b/src/genwrapper/genwrapper.conf
@@ -568,6 +568,12 @@ configure reflector "osgManipulator::MotionCommand"
 	end
 end
 
+configure reflector /osgShadow::.*/
+	configure method /.*ViewDependentShadowTechnique_ViewData.*/
+		replace with ""
+	end
+end
+
 #############################################################################
 
 # Fix bounding box/sphere - member templates aren't supported
