Ignore more troublesome osgViewer headers

--- a/src/genwrapper/genwrapper.conf
+++ b/src/genwrapper/genwrapper.conf
@@ -46,8 +46,11 @@ ignore file "osgDB/fstream"
 ignore file "osgUtil/OperationArrayFunctor"
 
 ignore file "osgViewer/api/X11/GraphicsWindowX11"
+ignore file "osgViewer/api/X11/PixelBufferX11"
 ignore file "osgViewer/api/Win32/GraphicsWindowWin32"
+ignore file "osgViewer/api/Win32/PixelBufferWin32"
 ignore file "osgViewer/api/Cocoa/GraphicsWindowCocoa"
+ignore file "osgViewer/api/Cocoa/PixelBufferCocoa"
 
 # these two won't parse because of the "degrees" symbol in XML
 ignore file "osgParticle/FluidFrictionOperator"
